--- a/app/src/main/res/layout/activity_facebook_login.xml
+++ b/app/src/main/res/layout/activity_facebook_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.puroong.ssuciety.FacebookLoginActivity">
+    tools:context="com.example.puroong.ssuciety.activities.FacebookLoginActivity">
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
