--- a/app/src/main/res/layout/activity_club_form.xml
+++ b/app/src/main/res/layout/activity_club_form.xml
@@ -23,7 +23,7 @@
         <ImageView
             android:id="@+id/ivClubWallpaper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_weight="0.63"
             app:srcCompat="@android:drawable/ic_menu_report_image" />
 
