--- a/app/src/main/res/layout/activity_clubinf.xml
+++ b/app/src/main/res/layout/activity_clubinf.xml
@@ -5,60 +5,119 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.puroong.ssuciety.activities.activities.clubinfo.Clubinf">
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="0dp"
-            android:layout_marginRight="0dp"
-            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            >
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="392dp"
-            android:layout_height="164dp"
-            app:srcCompat="@android:drawable/ic_menu_report_image"
- />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="동아리 이름"
-            android:id="@+id/club_name"
-            />
-        <TextView
-            android:id="@+id/club_explain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="설명:" />
-        <TextView
-            android:id="@+id/club_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TAG" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/club_room"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="동아리방 있음/없음" />
-        <TextView
-            android:id="@+id/club_phonenumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="010-XXXX-XXXX" />
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="392dp"
+                android:layout_height="164dp"
+                app:srcCompat="@android:drawable/ic_menu_report_image" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="동아리 이름" />
+
+            <TextView
+                android:id="@+id/club_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:text="설명:" />
+
+            <TextView
+                android:id="@+id/club_explain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:text="TAG" />
+
+                <TextView
+                    android:id="@+id/club_tag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:text="동아리방 유무" />
+
+                <TextView
+
+                    android:id="@+id/club_room_exist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:text="연락처" />
+
+                <TextView
+
+                    android:id="@+id/club_phonenumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
