--- a/app/src/main/res/layout/activity_club_schedule.xml
+++ b/app/src/main/res/layout/activity_club_schedule.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.puroong.ssuciety.activities.activities.clubinfo.ClubSchedule">
+    tools:context=".activities.clubinfo.ClubSchedule">
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
