--- a/app/src/main/res/layout/activity_clubinfomation.xml
+++ b/app/src/main/res/layout/activity_clubinfomation.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.puroong.ssuciety.activities.activities.clubinfo.Clubinfomation">
+    tools:context=".activities.clubinfo.Clubinfomation">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
