--- a/app/src/main/res/layout/content_manage_pic.xml
+++ b/app/src/main/res/layout/content_manage_pic.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.puroong.ssuciety.activities.activities.managepic.ManagePic"
+    tools:context=".activities.managepic.ManagePic"
     tools:showIn="@layout/activity_manage_pic">
 </android.support.constraint.ConstraintLayout>
