--- a/app/src/main/res/menu/menu_club_infomation.xml
+++ b/app/src/main/res/menu/menu_club_infomation.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.puroong.ssuciety.activities.activities.clubinfo.ClubInfomation">
+    tools:context=".activities.clubinfo.ClubInfomation">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
