--- a/app/src/main/res/layout/activity_club_act_pic.xml
+++ b/app/src/main/res/layout/activity_club_act_pic.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<ListView
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/listview"
-    android:divider="@null"
-    >
-</ListView>
+    android:weightSum="1">
+
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.84"
+        android:nestedScrollingEnabled="true"
+        android:divider="@null"></ListView>
 </LinearLayout>
