--- a/app/src/main/res/layout/activity_manage_pic.xml
+++ b/app/src/main/res/layout/activity_manage_pic.xml
@@ -7,22 +7,17 @@
     tools:context=".activities.managepic.ManagePic">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="210dp"
-            app:srcCompat="@android:drawable/ic_menu_report_image" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
         <ListView
             android:id="@+id/listview"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"></ListView>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"/>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
