--- a/app/src/main/res/layout/activity_select_pic.xml
+++ b/app/src/main/res/layout/activity_select_pic.xml
@@ -30,6 +30,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="추가" />
+        android:text="제출" />
 
 </LinearLayout>
