--- a/app/src/main/res/layout/actpicview.xml
+++ b/app/src/main/res/layout/actpicview.xml
@@ -4,29 +4,31 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
+
     <android.support.v7.widget.CardView
-        app:cardUseCompatPadding="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:cardUseCompatPadding="true">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-        <ImageView
-        android:id="@+id/actpic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_report_image"
-        android:layout_weight="0.20" />
 
-        <TextView
-        android:layout_gravity="center"
-        android:id="@+id/actpicname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+            <ImageView
+                android:id="@+id/actpic"
+                android:layout_width="match_parent"
+                android:layout_height="450px"
+                app:srcCompat="@android:drawable/ic_menu_report_image" />
+
+            <TextView
+                android:id="@+id/actpicname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="TextView" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
