Minor Update finish activity on any actvity start, add progressbar in ClubListActivity

--- a/app/src/main/res/layout/content_club_list.xml
+++ b/app/src/main/res/layout/content_club_list.xml
@@ -9,11 +9,8 @@
     tools:showIn="@layout/app_bar_club_list">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,24 +20,35 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
         <Spinner
             android:id="@+id/spTagType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:entries="@array/tag_array" />
+            android:entries="@array/tag_array"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tvTagText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="" />
+            android:text=""
+            android:visibility="gone"/>
 
         <View
+            android:id="@+id/line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@android:color/darker_gray"
+            android:visibility="gone"/>
 
         <ListView
             android:id="@+id/lvClubList"
